# projection-ui

./: .editorconfig  .stylelintrc.json  boot_test.py  pyproject.toml  setup.cfg
projection/static/: index.html
test_poc/: __init__.py
