[tool.poetry]
name = "projection"
version = "0.0.1"
description = "A library for projecting a UI onto a browser"
authors = ["Kaithar <noreply.committer@the-cell.co.uk>"]
repository = "https://github.com/kaithar/projection-ui"


[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
